--- a/signup.css
+++ b/signup.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    background: url(images/Loginbg.jpg);
+    background: url(../3.0 Webproject/images/Loginbg.jpg);
     background-size: cover;
 }
 
